<resources>
    <string name="app_name">Premier League</string>
    <string name="simulateAndEnd">Simulate and End</string>
    <string name="stringForVs">VS</string>
    <string name="final_match">FINAL MATCH</string>
    <string name="simulate">Simulate</string>
    <string name="enter_team_and_press_custom_team">Enter team and press custom team</string>
    <string name="add_hard_coded_teams">Add Hard Coded Teams</string>
    <string name="add_custom_team">Add custom Team</string>
    <string name="start_ipl">Start IPL</string>
    <string name="result">RESULT</string>
    <string name="_1st_position">1st Position</string>
    <string name="mumbai_indian">Mumbai indian</string>
    <string name="_2nd_position">2nd Position</string>
    <string name="dash">-</string>
    <string name="_3rd_position">3rd Position</string>
    <string name="made_by_rohit_rohitkumar281991_gmail_com">Made by Rohit - rohitkumar281991@gmail.com</string>
    <string name="restart">Restart</string>
</resources>